add dropshadow nos círculos

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joystick WebSocket</title>
     <style>
+        body {
+            background-color: #023047;
+        }
         canvas {
             border: 1px solid black;
             display: block;
             margin: auto;
+            background-color: #219ebc;
         }
         .joystick {
             text-align: center;
