--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
         <button id="down">Down</button>
         <button id="right">Right</button>
     </div>
+    <div id="nearUsers">
+    </div>
+    <div id = "chat"></div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
 </body>
